Changed Base64 encoder/decoder